// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A current application For a given snapshot Manifest file in stage It should match previous snapshot 1`] = `
"{
  \\"artifacts\\": {
    \\"mystagestack24C53A6C5.assets\\": {
      \\"type\\": \\"cdk:asset-manifest\\",
      \\"properties\\": {
        \\"file\\": \\"mystagestack24C53A6C5.assets.json\\",
        \\"requiresBootstrapStackVersion\\": 4
      }
    },
    \\"mystagestack24C53A6C5\\": {
      \\"type\\": \\"aws:cloudformation:stack\\",
      \\"environment\\": \\"aws://112233445566/eu-west-1\\",
      \\"properties\\": {
        \\"templateFile\\": \\"mystagestack24C53A6C5.template.json\\",
        \\"assumeRoleArn\\": \\"arn:\${AWS::Partition}:iam::112233445566:role/cdk-hnb659fds-deploy-role-112233445566-eu-west-1\\",
        \\"cloudFormationExecutionRoleArn\\": \\"arn:\${AWS::Partition}:iam::112233445566:role/cdk-hnb659fds-cfn-exec-role-112233445566-eu-west-1\\",
        \\"stackTemplateAssetObjectUrl\\": \\"s3://cdk-hnb659fds-assets-112233445566-eu-west-1/snapshot-value\\",
        \\"requiresBootstrapStackVersion\\": 4,
        \\"additionalDependencies\\": [
          \\"mystagestack24C53A6C5.assets\\"
        ],
        \\"stackName\\": \\"my-stage-stack-2\\"
      },
      \\"dependencies\\": [
        \\"mystagestack24C53A6C5.assets\\"
      ],
      \\"metadata\\": {
        \\"/my-stage/stack-2/MyFunction/ServiceRole/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionServiceRole3C357FF2\\"
          }
        ],
        \\"/my-stage/stack-2/MyFunction/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunction3BAA72D1\\"
          }
        ],
        \\"/my-stage/stack-2/MyFunction/CurrentVersion/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\"
          }
        ],
        \\"/my-stage/stack-2/MyFunctionVersionOutput\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionVersionOutput\\"
          }
        ],
        \\"/my-stage/stack-2/CDKMetadata/Default\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"CDKMetadata\\"
          }
        ],
        \\"/my-stage/stack-2/BootstrapVersion\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"BootstrapVersion\\"
          }
        ],
        \\"/my-stage/stack-2/CheckBootstrapVersion\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"CheckBootstrapVersion\\"
          }
        ]
      }
    }
  }
}"
`;

exports[`A current application For a given snapshot Manifest file in top-level It should match previous snapshot 1`] = `
"{
  \\"artifacts\\": {
    \\"assembly-my-stage\\": {
      \\"type\\": \\"cdk:cloud-assembly\\",
      \\"properties\\": {
        \\"directoryName\\": \\"assembly-my-stage\\",
        \\"displayName\\": \\"my-stage\\"
      }
    },
    \\"Tree\\": {
      \\"type\\": \\"cdk:tree\\",
      \\"properties\\": {
        \\"file\\": \\"tree.json\\"
      }
    },
    \\"stack-1.assets\\": {
      \\"type\\": \\"cdk:asset-manifest\\",
      \\"properties\\": {
        \\"file\\": \\"stack-1.assets.json\\",
        \\"requiresBootstrapStackVersion\\": 4
      }
    },
    \\"stack-1\\": {
      \\"type\\": \\"aws:cloudformation:stack\\",
      \\"environment\\": \\"aws://112233445566/eu-west-1\\",
      \\"properties\\": {
        \\"templateFile\\": \\"stack-1.template.json\\",
        \\"assumeRoleArn\\": \\"arn:\${AWS::Partition}:iam::112233445566:role/cdk-hnb659fds-deploy-role-112233445566-eu-west-1\\",
        \\"cloudFormationExecutionRoleArn\\": \\"arn:\${AWS::Partition}:iam::112233445566:role/cdk-hnb659fds-cfn-exec-role-112233445566-eu-west-1\\",
        \\"stackTemplateAssetObjectUrl\\": \\"s3://cdk-hnb659fds-assets-112233445566-eu-west-1/snapshot-value\\",
        \\"requiresBootstrapStackVersion\\": 4,
        \\"additionalDependencies\\": [
          \\"stack-1.assets\\"
        ]
      },
      \\"dependencies\\": [
        \\"stack-1.assets\\"
      ],
      \\"metadata\\": {
        \\"/stack-1/MyFunction/ServiceRole/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionServiceRole3C357FF2\\"
          }
        ],
        \\"/stack-1/MyFunction/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunction3BAA72D1\\"
          }
        ],
        \\"/stack-1/MyFunction/CurrentVersion/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\"
          }
        ],
        \\"/stack-1/MyFunctionVersionOutput\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionVersionOutput\\"
          }
        ],
        \\"/stack-1/CDKMetadata/Default\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"CDKMetadata\\"
          }
        ],
        \\"/stack-1/BootstrapVersion\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"BootstrapVersion\\"
          }
        ],
        \\"/stack-1/CheckBootstrapVersion\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"CheckBootstrapVersion\\"
          }
        ]
      }
    }
  }
}"
`;

exports[`A current application For a given snapshot Template file in stage It should match previous snapshot 1`] = `
"{
  \\"Resources\\": {
    \\"MyFunctionServiceRole3C357FF2\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"my-stage/stack-2/MyFunction/ServiceRole/Resource\\"
      }
    },
    \\"MyFunction3BAA72D1\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": \\"cdk-hnb659fds-assets-112233445566-eu-west-1\\",
          \\"S3Key\\": \\"snapshot-value.zip\\"
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"MyFunctionServiceRole3C357FF2\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\"
      },
      \\"DependsOn\\": [
        \\"MyFunctionServiceRole3C357FF2\\"
      ],
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"my-stage/stack-2/MyFunction/Resource\\",
        \\"aws:asset:path\\": \\"asset.snapshot-value\\",
        \\"aws:asset:property\\": \\"Code\\"
      }
    },
    \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\": {
      \\"Type\\": \\"AWS::Lambda::Version\\",
      \\"Properties\\": {
        \\"FunctionName\\": {
          \\"Ref\\": \\"MyFunction3BAA72D1\\"
        }
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"my-stage/stack-2/MyFunction/CurrentVersion/Resource\\"
      }
    }
  },
  \\"Outputs\\": {
    \\"MyFunctionVersionOutput\\": {
      \\"Value\\": {
        \\"Fn::GetAtt\\": [
          \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\",
          \\"Version\\"
        ]
      }
    }
  },
  \\"Parameters\\": {
    \\"BootstrapVersion\\": {
      \\"Type\\": \\"AWS::SSM::Parameter::Value<String>\\",
      \\"Default\\": \\"/cdk-bootstrap/hnb659fds/version\\",
      \\"Description\\": \\"Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store.\\"
    }
  },
  \\"Rules\\": {
    \\"CheckBootstrapVersion\\": {
      \\"Assertions\\": [
        {
          \\"Assert\\": {
            \\"Fn::Not\\": [
              {
                \\"Fn::Contains\\": [
                  [
                    \\"1\\",
                    \\"2\\",
                    \\"3\\"
                  ],
                  {
                    \\"Ref\\": \\"BootstrapVersion\\"
                  }
                ]
              }
            ]
          },
          \\"AssertDescription\\": \\"CDK bootstrap stack version 4 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.\\"
        }
      ]
    }
  }
}"
`;

exports[`A current application For a given snapshot Template file in top-level It should match previous snapshot 1`] = `
"{
  \\"Resources\\": {
    \\"MyFunctionServiceRole3C357FF2\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/ServiceRole/Resource\\"
      }
    },
    \\"MyFunction3BAA72D1\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": \\"cdk-hnb659fds-assets-112233445566-eu-west-1\\",
          \\"S3Key\\": \\"snapshot-value.zip\\"
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"MyFunctionServiceRole3C357FF2\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\"
      },
      \\"DependsOn\\": [
        \\"MyFunctionServiceRole3C357FF2\\"
      ],
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/Resource\\",
        \\"aws:asset:path\\": \\"asset.snapshot-value\\",
        \\"aws:asset:property\\": \\"Code\\"
      }
    },
    \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\": {
      \\"Type\\": \\"AWS::Lambda::Version\\",
      \\"Properties\\": {
        \\"FunctionName\\": {
          \\"Ref\\": \\"MyFunction3BAA72D1\\"
        }
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/CurrentVersion/Resource\\"
      }
    }
  },
  \\"Outputs\\": {
    \\"MyFunctionVersionOutput\\": {
      \\"Value\\": {
        \\"Fn::GetAtt\\": [
          \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\",
          \\"Version\\"
        ]
      }
    }
  },
  \\"Parameters\\": {
    \\"BootstrapVersion\\": {
      \\"Type\\": \\"AWS::SSM::Parameter::Value<String>\\",
      \\"Default\\": \\"/cdk-bootstrap/hnb659fds/version\\",
      \\"Description\\": \\"Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store.\\"
    }
  },
  \\"Rules\\": {
    \\"CheckBootstrapVersion\\": {
      \\"Assertions\\": [
        {
          \\"Assert\\": {
            \\"Fn::Not\\": [
              {
                \\"Fn::Contains\\": [
                  [
                    \\"1\\",
                    \\"2\\",
                    \\"3\\"
                  ],
                  {
                    \\"Ref\\": \\"BootstrapVersion\\"
                  }
                ]
              }
            ]
          },
          \\"AssertDescription\\": \\"CDK bootstrap stack version 4 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.\\"
        }
      ]
    }
  }
}"
`;

exports[`Files from a v5 Cloud Assembly Manifest file It should match previous snapshot 1`] = `
"{
  \\"artifacts\\": {
    \\"Tree\\": {
      \\"type\\": \\"cdk:tree\\",
      \\"properties\\": {
        \\"file\\": \\"tree.json\\"
      }
    },
    \\"stack-1\\": {
      \\"type\\": \\"aws:cloudformation:stack\\",
      \\"environment\\": \\"aws://112233445566/eu-west-1\\",
      \\"properties\\": {
        \\"templateFile\\": \\"stack-1.template.json\\"
      },
      \\"metadata\\": {
        \\"/stack-1\\": [
          {
            \\"type\\": \\"aws:cdk:asset\\",
            \\"data\\": \\"snapshot-value\\"
          }
        ],
        \\"/stack-1/MyFunction/ServiceRole/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionServiceRole3C357FF2\\"
          }
        ],
        \\"/stack-1/MyFunction/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunction3BAA72D1\\"
          }
        ],
        \\"/stack-1/MyFunction/CurrentVersion/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\"
          }
        ],
        \\"/stack-1/MyFunctionVersionOutput\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionVersionOutput\\"
          }
        ]
      }
    }
  },
  \\"runtime\\": {}
}"
`;

exports[`Files from a v5 Cloud Assembly Template file It should match previous snapshot 1`] = `
"{
  \\"Resources\\": {
    \\"MyFunctionServiceRole3C357FF2\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/ServiceRole/Resource\\"
      }
    },
    \\"MyFunction3BAA72D1\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"snapshot-value\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"snapshot-value\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"snapshot-value\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"MyFunctionServiceRole3C357FF2\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\"
      },
      \\"DependsOn\\": [
        \\"MyFunctionServiceRole3C357FF2\\"
      ],
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/Resource\\",
        \\"aws:asset:path\\": \\"asset.snapshot-value\\",
        \\"aws:asset:property\\": \\"Code\\"
      }
    },
    \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\": {
      \\"Type\\": \\"AWS::Lambda::Version\\",
      \\"Properties\\": {
        \\"FunctionName\\": {
          \\"Ref\\": \\"MyFunction3BAA72D1\\"
        }
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/CurrentVersion/Resource\\"
      }
    }
  },
  \\"Parameters\\": {},
  \\"Outputs\\": {
    \\"MyFunctionVersionOutput\\": {
      \\"Value\\": {
        \\"Fn::GetAtt\\": [
          \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\",
          \\"Version\\"
        ]
      }
    }
  }
}"
`;

exports[`Files from a v7 Cloud Assembly Manifest file It should match previous snapshot 1`] = `
"{
  \\"artifacts\\": {
    \\"assembly-my-stage\\": {
      \\"type\\": \\"cdk:cloud-assembly\\",
      \\"properties\\": {
        \\"directoryName\\": \\"assembly-my-stage\\",
        \\"displayName\\": \\"my-stage\\"
      }
    },
    \\"Tree\\": {
      \\"type\\": \\"cdk:tree\\",
      \\"properties\\": {
        \\"file\\": \\"tree.json\\"
      }
    },
    \\"stack-1\\": {
      \\"type\\": \\"aws:cloudformation:stack\\",
      \\"environment\\": \\"aws://112233445566/eu-west-1\\",
      \\"properties\\": {
        \\"templateFile\\": \\"stack-1.template.json\\"
      },
      \\"metadata\\": {
        \\"/stack-1\\": [
          {
            \\"type\\": \\"aws:cdk:asset\\",
            \\"data\\": \\"snapshot-value\\"
          }
        ],
        \\"/stack-1/MyFunction/ServiceRole/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionServiceRole3C357FF2\\"
          }
        ],
        \\"/stack-1/MyFunction/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunction3BAA72D1\\"
          }
        ],
        \\"/stack-1/MyFunction/CurrentVersion/Resource\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\"
          }
        ],
        \\"/stack-1/MyFunctionVersionOutput\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"MyFunctionVersionOutput\\"
          }
        ],
        \\"/stack-1/CDKMetadata/Default\\": [
          {
            \\"type\\": \\"aws:cdk:logicalId\\",
            \\"data\\": \\"CDKMetadata\\"
          }
        ]
      }
    }
  }
}"
`;

exports[`Files from a v7 Cloud Assembly Template file It should match previous snapshot 1`] = `
"{
  \\"Resources\\": {
    \\"MyFunctionServiceRole3C357FF2\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/ServiceRole/Resource\\"
      }
    },
    \\"MyFunction3BAA72D1\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"snapshot-value\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"snapshot-value\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"snapshot-value\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"MyFunctionServiceRole3C357FF2\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\"
      },
      \\"DependsOn\\": [
        \\"MyFunctionServiceRole3C357FF2\\"
      ],
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/Resource\\",
        \\"aws:asset:path\\": \\"asset.snapshot-value\\",
        \\"aws:asset:property\\": \\"Code\\"
      }
    },
    \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\": {
      \\"Type\\": \\"AWS::Lambda::Version\\",
      \\"Properties\\": {
        \\"FunctionName\\": {
          \\"Ref\\": \\"MyFunction3BAA72D1\\"
        }
      },
      \\"Metadata\\": {
        \\"aws:cdk:path\\": \\"stack-1/MyFunction/CurrentVersion/Resource\\"
      }
    }
  },
  \\"Parameters\\": {},
  \\"Outputs\\": {
    \\"MyFunctionVersionOutput\\": {
      \\"Value\\": {
        \\"Fn::GetAtt\\": [
          \\"MyFunctionCurrentVersion197490AFxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\\",
          \\"Version\\"
        ]
      }
    }
  }
}"
`;
